# nodriver-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
src/nodriver_mcp/: __main__.py  server.py
